--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
  <ul class="header">
 
-    <li><a href="home.com"> Homepage</a></li>  
-    <li> <a href="projects.com">Projects</a></li> 
-    <li><a href="socials.com">Socials </a></li>
+    <li><a href="index.html"> Home</a></li>  
+    <li> <a href="../chapter list/chapter-list.html ">Chapter List</a></li> 
+    <li><a href="../faqs/faqs.html">FAQs and Info </a></li>
+    <li><a href="battle-score.html">Battles Scoreboard </a></li>
     
 </ul>
 
