--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <ul class="header">
 
     <li><a href="index.html"> Home</a></li>  
-    <li> <a href="../chapter list/chapter-list.html ">Chapter List</a></li> 
+    <li> <a href="./2. chapter list/chapter list nav/chapter-list-nav.html">Chapter List</a></li> 
     <li><a href="../faqs/faqs.html">FAQs and Info </a></li>
     <li><a href="battle-score.html">Battles Scoreboard </a></li>
     
