--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <li><a href="index.html"> Home</a></li>  
     <li> <a href="./2. chapter list/chapter list nav/chapter-list-nav.html">Chapter List</a></li> 
-    <li><a href="../faqs/faqs.html">FAQs and Info </a></li>
+    <li><a href="./4. faqs/faqs.html">FAQs and Info </a></li>
     <li><a href="battle-score.html">Battles Scoreboard </a></li>
     
 </ul>
