Update 0b. chapter 0.html

--- a/2. chapter list/0b. chapter 0.html
+++ b/2. chapter list/0b. chapter 0.html
@@ -31,4 +31,4 @@ to ensure multiple types of gameplays, make copies of the Radical Red 4.0. <br>
 
 - Name one file as "rr4.0 with friends", and the others you can just leave as "Radical Red 4.0".<br> </p>
 
-<a herf="Chapter 1.html">Next Chapter</a>
+<a href="Chapter 1.html">Next Chapter</a>
