--- a/2. chapter list/1. chapter-1.html
+++ b/2. chapter list/1. chapter-1.html
@@ -50,4 +50,6 @@
 
 Format: Place Holder Pokemon for Oak.</p>
 
-<a href="2. chapter-2.html">Next Chapter</a>
+<a href="2. chapter-2.html">Next Chapter</a><br>
+
+<a href="Chapter 0.html">Previous Chapter</a>
