--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -33,4 +33,5 @@
 
 </p>
 
-<a href="3. chapter-3.html">Next Chapter</a>
+<a href="3. chapter-3.html">Next Chapter</a><br>
+<a href="1.chapter-1.html">Previous Chapter</a>
