--- a/2. chapter list/3. chapter-3.html
+++ b/2. chapter list/3. chapter-3.html
@@ -45,5 +45,6 @@
     <br>
     
 
-    <a href="4. chapter-4.html">Next Chapter</a>
+    <a href="4. chapter-4.html">Next Chapter</a><br>
+    <a href="2. chapter-2.html">Previous Chapter</a>
 </p>
