--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -43,6 +43,7 @@ CATCHRATE: 120 OR HIGHER
 <br>
 <br>
 
-<a href="5.chapter-5.html">Next Chapter</a>
+<a href="5.chapter-5.html">Next Chapter</a><br>
+<a href="3. chapter-3.html">Previous Chapter</a>
 
 </p>
