--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><a href="index.html"> Home</a></li>  
     <li> <a href="./2. chapter list/chapter list nav/chapter-list-nav.html">Chapter List</a></li> 
     <li><a href="./4. faqs/faqs.html">FAQs and Info </a></li>
-    <li><a href="battle-score.html">Battles Scoreboard </a></li>
+    <li><a href="./3. battle scoreboard/battle-score.html">Battles Scoreboard </a></li>
     
 </ul>
 
