--- a/3. battle scoreboard/battle-score.html
+++ b/3. battle scoreboard/battle-score.html
@@ -1,6 +1,22 @@
-<p>
-so first battle we did <br>
-leeroy got smoke 3-0 (best out of 5) <br>
-and i'll put dow the teams and pokemon later. <br>
 
-</p>
+
+<!-- this is the battle score table -->
+<table>
+
+    <!-- header  -->
+<th>
+<td>The Battle Scoreboard</td>
+</th>
+
+<!-- names row -->
+<tr>
+<td>ADAM</td>
+<td>LEEROY</td>
+<td>BHARNS-SKHEE</td>
+</tr>
+
+
+
+</table>
+
+
