--- a/3. battle scoreboard/battle-score.html
+++ b/3. battle scoreboard/battle-score.html
@@ -1,4 +1,27 @@
+<!-- 0. doc and head --> 
 
+ <!doctype html> 
+<html>
+<head> 
+
+
+
+<!-- 2. stylesheet and title --> 
+
+<link rel="stylesheet" href="style-battle.css"> 
+<title> Battle Scoreboard </title>
+</head>
+
+
+<!-- 3. body overview --> 
+
+<body>
+
+
+
+<!-- background container-->
+
+<div class="bg"> 
 
 <!-- this is the battle score table -->
 <table>
@@ -15,8 +38,16 @@
 <td>BHARNS-SKHEE</td>
 </tr>
 
-
-
 </table>
+
+
+</div>   
+</body>
+</html>
+
+
+
+
+
 
 
