--- a/2. chapter list/1. chapter-1.html
+++ b/2. chapter list/1. chapter-1.html
@@ -52,4 +52,4 @@ Format: Place Holder Pokemon for Oak.</p>
 
 <a href="2. chapter-2.html">Next Chapter</a><br>
 
-<a href="Chapter 0.html">Previous Chapter</a>
+<a href="0b. chapter 0.html">Previous Chapter</a>
