--- a/2. chapter list/1. chapter-1.html
+++ b/2. chapter list/1. chapter-1.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+
+<html>
+
+<body>
+
 <h1>Pokemon Radical Red Walkthrough</h1>
 
 
@@ -50,6 +56,11 @@
 
 Format: Place Holder Pokemon for Oak.</p>
 
+
 <a href="2. chapter-2.html">Next Chapter</a><br>
 
-<a href="0b. chapter 0.html">Previous Chapter</a>
+<a href="Chapter 0.html">Previous Chapter</a>
+
+</body>
+
+</html>
