--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+
+<html>
+
+<body>
+
 <h1>Pokemon Radical Red Walkthrough</h1>
 
 <h2>Chapter 2 - Errands</h2>
@@ -34,4 +40,8 @@
 </p>
 
 <a href="3. chapter-3.html">Next Chapter</a><br>
-<a href="1. chapter-1.html">Previous Chapter</a>
+<a href="1.chapter-1.html">Previous Chapter</a>
+
+</body>
+
+</html>
