--- a/2. chapter list/3. chapter-3.html
+++ b/2. chapter list/3. chapter-3.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+
+<html>
+
+<body>
+
 <h1>Pokemon Radical Red Walkthrough</h1>
 
 <h2>Chapter 3 - First Pokemon and Showdown</h2>
@@ -48,3 +54,8 @@
     <a href="4. chapter-4.html">Next Chapter</a><br>
     <a href="2. chapter-2.html">Previous Chapter</a>
 </p>
+
+
+</body>
+
+</html>
