--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+
+<html>
+
+<body>
+
 <h1>Pokemon Radical Red Walkthrough</h1>
 
 <h2>Chapter 4 - Beating Rivals and Vidirian Forest</h2>
@@ -47,3 +53,7 @@ CATCHRATE: 120 OR HIGHER
 <a href="3. chapter-3.html">Previous Chapter</a>
 
 </p>
+
+</body>
+
+</html>
