--- a/2. chapter list/6.chapter-6.html
+++ b/2. chapter list/6.chapter-6.html
@@ -6,7 +6,7 @@
 
     <h1>Pokemon Radical Red Walkthrough</h1>
 
-    <h2>Chapter 6 Beefing Brock and Having Showdown</h2>
+    <h2>Chapter 6 - Beefing Brock and Having Showdown</h2>
 
     <p>
         - Head to the Gym and beat Brock and his Gym challenge.
