Update 0b. chapter 0.html

--- a/2. chapter list/0b. chapter 0.html
+++ b/2. chapter list/0b. chapter 0.html
@@ -8,7 +8,7 @@
 
 <nav>
 
-<a href="/2. chapter list/1.chapter-1.html">Chapter 1</a>
+<a href="../2. chapter list/1.chapter-1.html">Chapter 1</a>
 <a href="2. chapter-2.html">Chapter 2</a>
 <a href="3. chapter-3.html">Chapter 3</a>
 <a href="4. chapter-4.html">Chapter 4</a>
