--- a/2. chapter list/7.chapter-7.html
+++ b/2. chapter list/7.chapter-7.html
@@ -4,6 +4,22 @@
 
 <body>
 
+<header>
+
+<nav>
+
+<a href="0b. chapter 0.html">Chapter 0</a>
+<a href="1. chapter-1.html">Chapter 1</a>
+<a href="2. chapter-2.html">Chapter 2</a>
+<a href="3. chapter-3.html">Chapter 3</a>
+<a href="4 .chapter-4.html">Chapter 4</a>
+<a href="5.chapter-5.html">Chapter 5</a>
+<a href="6.chapter-6.html">Chapter 6</a>
+
+</nav>
+
+</header> 
+   
 <h1>Pokemon Radical Red Walkthrough</h1>
 
 <h2>Chapter 7 - Route 3 & 4</h2>
