--- a/2. chapter list/9.chapter-9.html
+++ b/2. chapter list/9.chapter-9.html
@@ -5,6 +5,25 @@
 <body>
 
     <!--Nav Bar on github-->
+    <header>
+
+<nav>
+
+<a href="0b. chapter 0.html">Chapter 0</a>
+<a href="1. chapter-1.html">Chapter 1</a>
+<a href="2. chapter-2.html">Chapter 2</a>
+<a href="3. chapter-3.html">Chapter 3</a>
+<a href="4 .chapter-4.html">Chapter 4</a>
+<a href="5.chapter-5.html">Chapter 5</a>
+<a href="6.chapter-6.html">Chapter 6</a>
+<a href="7.chapter-7.html">Chapter 7</a>
+<a href="8.chapter-8.html">Chapter 8</a>
+
+   
+
+</nav>
+
+</header> 
 
 <h1>Pokemon Radical Red Walkthrough</h1>
 
