--- a/2. chapter list/0b. chapter 0.html
+++ b/2. chapter list/0b. chapter 0.html
@@ -15,7 +15,8 @@
 <a href="5.chapter-5.html">Chapter 5</a>
 <a href="6.chapter-6.html">Chapter 6</a>
 <a href="7.chapter-7.html">Chapter 7</a>
-
+<a href="8.chapter-8.html">Chapter 8</a>
+<a href="9.chapter-9.html">Chapter 9</a>
 </nav>
 
 </header>
