--- a/2. chapter list/8.chapter-8.html
+++ b/2. chapter list/8.chapter-8.html
@@ -17,6 +17,7 @@
 <a href="6.chapter-6.html">Chapter 6</a>
 <a href="7.chapter-7.html">Chapter 7</a>
 <a href="9.chapter-9.html">Chapter 9</a>
+<a href="10.chapter-10.html">Chapter 10</a>
 
    
 
