--- a/2. chapter list/9.chapter-9.html
+++ b/2. chapter list/9.chapter-9.html
@@ -18,6 +18,7 @@
 <a href="6.chapter-6.html">Chapter 6</a>
 <a href="7.chapter-7.html">Chapter 7</a>
 <a href="8.chapter-8.html">Chapter 8</a>
+<a href="10.chapter-10.html">Chapter 10</a>
 
    
 
