--- a/2. chapter list/8.chapter-8.html
+++ b/2. chapter list/8.chapter-8.html
@@ -18,6 +18,8 @@
 <a href="7.chapter-7.html">Chapter 7</a>
 <a href="9.chapter-9.html">Chapter 9</a>
 <a href="10.chapter-10.html">Chapter 10</a>
+<a href="11.chapter-11.html">Chapter 11</a>
+<a href="12.chapter-12.html">Chapter 12</a>
 
    
 
