--- a/2. chapter list/12.chapter-12.html
+++ b/2. chapter list/12.chapter-12.html
@@ -8,6 +8,7 @@
 
 <nav>
 
+<a href="0b. chapter 0.html">Chapter 0</a>
 <a href="1. chapter-1.html">Chapter 1</a>
 <a href="2. chapter-2.html">Chapter 2</a>
 <a href="3. chapter-3.html">Chapter 3</a>
