--- a/2. chapter list/12.chapter-12.html
+++ b/2. chapter list/12.chapter-12.html
@@ -20,6 +20,7 @@
 <a href="9.chapter-9.html">Chapter 9</a>
 <a href="10.chapter-10.html">Chapter 10</a>
 <a href="11.chapter-11.html">Chapter 11</a>
+<a href="13.chapter-13.html">Chapter 13</a>
             
 </nav>        
 
