--- a/2. chapter list/13.chapter-13.html
+++ b/2. chapter list/13.chapter-13.html
@@ -71,9 +71,9 @@ LEVEL CAP: 34
 <br>
 <br>
 
-<a href="14.chapter-14.html">Chapter 14</a>
+<a href="14.chapter-14.html">Next Chapter</a>
 <br>
-<a href="12.chapter-12.html">Chapter 12</a>
+<a href="12.chapter-12.html">Previous Chapter</a>
 
 </p>
 
