--- a/2. chapter list/13.chapter-13.html
+++ b/2. chapter list/13.chapter-13.html
@@ -21,6 +21,7 @@
     <a href="10.chapter-10.html">Chapter 10</a>
     <a href="11.chapter-11.html">Chapter 11</a>
     <a href="12.chapter-12.html">Chapter 12</a>
+    <a href="14.chapter-14.html">Chapter 14</a>
 
 </nav>
 
