--- a/2. chapter list/0b. chapter 0.html
+++ b/2. chapter list/0b. chapter 0.html
@@ -22,23 +22,23 @@
 <a href="12.chapter-12.html">Chapter 12</a>
 <a href="13.chapter-13.html">Chapter 13</a>
 <a href="14.chapter-14.html">Chapter 14</a>
+  
 </nav>
 
 </header>
 
 <h1> Pokemon Radical Red Walkthrough</h1>
 
-
 <h2> Chapter 0 - Setup</h2>
 
-
-
-<p> - Download Emulator: https://visualboyadvance.org/download/1-8-0-beta-3
+<p>
+  
+- Download Emulator: <a href="https://visualboyadvance.org/download/1-8-0-beta-3">Visualboy Advance Emulator Download Link</a>
 
 <br>
 <br> 
 
-- Download FireRedRom:https://archive.org/details/1636PokemonFireRedUSquirrels
+- Download FireRedRom: <a href="https://archive.org/details/1636PokemonFireRedUSquirrels">FireRedRom Download Link</a>
 
 <br>
 <br>
@@ -48,19 +48,24 @@
 <br>
 <br>
 
-- Use this patcher on FireRed to turn it into Radical Red 4.0: https://patch.radicalred.net/
+- Use this patcher on FireRed to turn it into Radical Red 4.0: <a href="https://patch.radicalred.net/">Patcher Link</a>
 
 <br>
 <br>
 
 - Rename the patched FireRed file to "Radical Red 4.0", <br>
-to ensure multiple types of gameplays, make copies of the Radical Red 4.0. <br>
+to ensure multiple types of gameplays, make copies of the Radical Red 4.0. 
+
+<br>
 <br>
 
-- Name one file as "rr4.0 with friends", and the others you can just leave as "Radical Red 4.0".<br> </p>
+- Name one file as "rr4.0 with friends", and the others you can just leave as "Radical Red 4.0".<br>
 
-<a href="1. chapter-1.html">Next Chapter</a>
-  <br>
+<br>
+<br>
+
+<a href="1.chapter-1.html">Next Chapter</a>
+<br>
 <a href="chapter list nav/chapter-list-nav.html">Chapter List</a>
 
 </body>
