--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -59,6 +59,15 @@
 - Go to the trainer school for the pokevial challenge.
 <br> *The building with a teacher teaching a student.
 
+<br>
+<br>
+
+- Beat the teacher to obtain the PokeVial.<br>
+* How to win: Use skarmory, gible, and fletchling.<br>
+skarmory sets up rocks then you switch to gible.<br>
+Next, gible dies and the next 5 shedninjas go down.<br>
+Send out fletchling and bravebird and now you won.
+
 </p>
 
 <a href="3. chapter-3.html">Next Chapter</a><br>
