--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -63,10 +63,11 @@
 <br>
 
 - Beat the teacher to obtain the PokeVial.<br>
-* How to win: Use skarmory, gible, and fletchling.<br>
-skarmory sets up rocks then you switch to gible.<br>
-Next, gible dies and the next 5 shedninjas go down.<br>
-Send out fletchling and bravebird and now you won.
+* HOW TO BEAT THE TEACHER: <br>
+Use skarmory, gible, and fletchling.<br>
+Skarmory sets up rocks then you switch to Gible.<br>
+Next, Gible dies and the next 5 Shedninjas go down.<br>
+Send out Fletchling and bravebird and now you won.
 
 </p>
 
