--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -62,7 +62,11 @@
 <br>
 <br>
 
-- Beat the teacher to obtain the PokeVial.<br>
+- Beat the teacher to obtain the PokeVial.
+    
+    <br>
+    <br>
+    
 * HOW TO BEAT THE TEACHER: <br>
 Use skarmory, gible, and fletchling.<br>
 Skarmory sets up rocks then you switch to Gible.<br>
