--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -22,52 +22,57 @@
 <a href="12.chapter-12.html">Chapter 12</a>
 <a href="13.chapter-13.html">Chapter 13</a>
 <a href="14.chapter-14.html">Chapter 14</a>
+  
 </nav>
 
 </header> 
 
 <h1>Pokemon Radical Red Walkthrough</h1>
 
-<h2>Chapter 4 - Beating Rivals and Vidirian Forest</h2>
+<h2>Chapter 4 - The First Showdown</h2>
 
-
-<p>ACCESS: Everyting until the end of Viridian Forest.
-
-<br>
-<br>
-
-- Set up your PC "Roster" and "Bench" in Box 25 and 24 respectively.
+<p>
+  
+ACCESS: NO CATCHING.
 
 <br>
 <br>
 
-- Head East to route 22 to beat Gary.
+- Set up your PC Roster and Bench in Box 25 and 24 respectively.
 
 <br>
 <br>
 
-- Head North to forest to beat "Brandon" for the exp.share. 
+- Train your three pokemon to level 15 for first showdown.
 
 <br>
 <br>
 
-- Fight your way through viridian and beat the infinite repel girl as well.
+[PREP FOR SHOWDOWN]
 
 <br>
 <br>
 
-- Find a money-making pokemon and release your placeholder pokemon.
+PREP: LOAD YOUR TEAM IN SHOWDOWN.
 
 <br>
 <br>
 
-- Catch 7 more pokemon to reach a total of at least 11 caught on your pokedex.
+LEVEL CAP: 15
+<br>
+ROSTER: 3 POKEMON
+<br>
+STAGE & BST LIMIT: FIRST STAGE ONLY, BST; 350 OR LOWER.
 
 <br>
 <br>
 
-ROSTER: AT LEAST 11 caught<br>
-CATCHRATE: 120 OR HIGHER
+FORMAT: 3 V 3 BATTLE (LEVEL CAP: 15)
+<br>
+EVS: ALL 1 EV
+<br>
+NATURES: ALL BASHFUL
+
 <br>
 <br>
 
