--- a/2. chapter list/6.chapter-6.html
+++ b/2. chapter list/6.chapter-6.html
@@ -47,7 +47,7 @@
     <br>
     <br>
         
-    - GO to the Museum and Beat Falkner in the upstairs. 
+    - Go to the Museum and Beat Falkner in the upstairs. 
 
     <br>
     <br>
