--- a/2. chapter list/9.chapter-9.html
+++ b/2. chapter list/9.chapter-9.html
@@ -32,21 +32,11 @@
 
 <h1>Pokemon Radical Red Walkthrough</h1>
 
-<h2>Chapter 9 - Cerulean, Items, and Showdown</h2>
+<h2>Chapter 9 - The Second Showdown</h2>
 
 <p>
 
-*[ACCESS]: NO CATCHING
-
-<br>
-<br>
-
-- Head over to Cerulean to heal.
-
-<br>
-<br>
-
-- Go south and do the puzzle battle in the house for Move Relearner
+ACCESS: NO CATCHING.
 
 <br>
 <br>
@@ -56,18 +46,29 @@
 <br>
 <br>
 
-ROSTER: <ul>POKEMON: Team of 6 from your current level
+PREP: - Your three pokemon from showdown I, need to be included in your team.
     <br>
-    LEVEL CAP: 22
+     - Three more eligible pokemon need to be added to make a team of six.
     <br>
-    ROSTER: 23 POKEMON (same as chapter 8)
-</ul>
+     - Train your team to lv 22, and load your team into showdown.
 
-<br>
+    <br>
+    <br>
+             
+    LEVEL-CAP: 22
+    <br>
+    ROSTER: 9 POKEMON (NO NEW POKEMON)
+    <br>
+    STAGE & BST LIMIT: Any stage, BST 420 or lower. 
 
-BOSS BATTLE: SHOWDOWN II
-<br>
-Format: 6-v-6 (full team) (level cap 22)
+    <br>
+    <br>
+         
+    FORMAT: 6 vs 6 battle (best of 7).
+    <br>
+    EVS: All 1 EV.
+    <br>
+    NATURES: All bashful.
 
 <br>
 <br>
