--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -33,7 +33,8 @@
 
 <p>
   
-ACCESS: NO CATCHING.
+SPECIAL CATCH: Catch a 3-star pokemon with no catchrate limit (reccomend catching a starter)
+    (NOTE: try not to go below 45, cuz it will be hard with jsut pokeballs.)   
 
 <br>
 <br>
@@ -60,7 +61,7 @@ PREP: LOAD YOUR TEAM IN SHOWDOWN.
 
 LEVEL CAP: 15
 <br>
-ROSTER: 3 POKEMON
+ROSTER: 4 POKEMON (1 New Special Catch)
 <br>
 STAGE & BST LIMIT: FIRST STAGE ONLY, BST; 350 OR LOWER.
 
