--- a/2. chapter list/7.chapter-7.html
+++ b/2. chapter list/7.chapter-7.html
@@ -48,7 +48,12 @@ ACCESS: NO CATCHING
 <br>
 <br>
 
-ROSTER: 7 POKEMON (NO NEW)
+- Heal up and chose a team of 6 for Showdown II.
+
+<br>
+<br>
+
+ROSTER: 8 POKEMON (NO NEW)
 <br>
 STAGE & BST LIMIT: Any stage, BST 420 or lower. 
 
