--- a/2. chapter list/9.chapter-9.html
+++ b/2. chapter list/9.chapter-9.html
@@ -36,7 +36,10 @@
 
 <p>
 
-ACCESS: NO CATCHING.
+SPECIAL CATCH: Catch 1 new 3-star pokemon with no catchrate limit (reccomend catching a starter)
+<br>
+(NOTE: try not to go below 45, cuz it will be hard with just pokeballs.) 
+
 
 <br>
 <br>
@@ -46,7 +49,8 @@ ACCESS: NO CATCHING.
 <br>
 <br>
 
-PREP: - Your three pokemon from showdown I, need to be included in your team.
+PREP: <br> 
+    - Your three pokemon from showdown I, need to be included in your team.
     <br>
      - Three more eligible pokemon need to be added to make a team of six.
     <br>
@@ -57,7 +61,7 @@ PREP: - Your three pokemon from showdown I, need to be included in your team.
              
     LEVEL-CAP: 22
     <br>
-    ROSTER: 9 POKEMON (NO NEW POKEMON)
+    ROSTER: 11 POKEMON (1 NEW POKEMON)
     <br>
     STAGE & BST LIMIT: Any stage, BST 420 or lower. 
 
