--- a/2. chapter list/10.chapter-10.html
+++ b/2. chapter list/10.chapter-10.html
@@ -29,41 +29,47 @@
 
  <h1>Pokemon Radical Red Walkthrough</h1>
 
- <h2>Chapter 10 - Gary,Bridge and Route 24</h2>
+ <h2>Chapter 10 - Mt. Moon</h2>
 
  <p>
 
-[ACESS]: Everything up to Route 24
+ACCESS: Everything until the end of Mt Moon.
+<br>
+CATCHRATE: Try to stay 120 and above cuz pokeballs are weak. 
+<br>
+STAGE & BST LIMIT: Any stage, BST 460 or lower. 
 
 <br>
 <br>
+  
+ - Head into mount moon, and fight thought the cave.
+  
+ <br>
+ <br>
+ 
+ - Get to the nerd with fossils and beat him up.
 
-- Heal Up.
+ <br>
+ <br>
+  
+ - Beat the Team Rocket Admin and go to Cerulean to heal.
 
-<br>
-<br>
+ <br>
+ <br>
+  
+  - Go one pokemon from each of the three levels on Mt.moon (one more).
 
-- Go to the bridge to beef Gary for the Teleporter.
-
-<br>
-<br>
-
-- Beat the whole Bridge.
-
-<br>
-<br>
-
--Catch 2 pokemon in Route 24.
-
-<br>
-<br>
-
-ROSTER: 25 POKEMON (2 NEW)
-<br>
-CATCHRATE: 120 OR HIGHER
-<br>
-LEVEL CAP: 27
-
+ <br>
+ <br>
+    
+ ROSTER: 14 POKEMON (3 NEW)
+ <br>
+ CATCHRATE: 120 and above (pokeballs are weak)
+ <br>
+ STAGE & BST LIMIT: any stage, BST 460 or lower.
+ <br>
+ LEVEL CAP: 27
+        
 <br>
 <br>
 
