--- a/2. chapter list/11.chapter-11.html
+++ b/2. chapter list/11.chapter-11.html
@@ -29,41 +29,43 @@
 
 <h1>Pokemon Radical Red Walkthrough</h1>
 
-<h2>Chapter 11 - Route 25, Bill, and Bugsy</h2>
+<h2>Chapter 11 - Cerulean,Items and Gary</h2>
 
 <p>
 
-[ACCESS]: Everything up to Route 25.
+ACCESS: NO CATCHING
 
-<br>
-<br>
+  <br>
+  <br>
+        
+  - Head over to Cerulean to heal. 
 
-- Battle to the end of Route 25.
+  <br>
+  <br> 
+  
+  - Go south and do the puzzle battle in the house for Move Relearner.
 
-<br>
-<br>
+  <br>
+  <br>
+  
+  - Go PokeMart and buy TMs. 
 
-- Go Bill's House to get the Boat Ticket.
+  <br>
+  <br>
+  
+  - Go to the bridge to beef gary for the Teleporter. 
 
-<br>
-<br>
+  <br>
+  <br>
+  
+   - Register your Pokerider in your bag to use it with BACKSPACE. 
 
-- Beat Bugsy outside Bill's house.
-
-<br>
-<br>
-
-- Catch 2 pokemon in Route 25.
-
-<br>
-<br>
-
-ROSTER: 27 POKEMON (2 NEW)
-<br>
-CATCHRATE: 120 OR HIGHER 
-<br>
-LEVEL CAP: 27
-
+  <br>
+  <br>
+          
+  ROSTER: 14 POKEMON (NO NEW)
+  <br>
+  <LEVEL CAP>: 27
 <br>
 <br>
 
