--- a/2. chapter list/10.chapter-10.html
+++ b/2. chapter list/10.chapter-10.html
@@ -57,7 +57,7 @@ STAGE & BST LIMIT: Any stage, BST 460 or lower.
  <br>
  <br>
   
-  - Go one pokemon from each of the three levels on Mt.moon (one more).
+  - Catch one pokemon from each of the three levels on Mt.moon (one more).
 
  <br>
  <br>
