--- a/2. chapter list/2. chapter-2.html
+++ b/2. chapter list/2. chapter-2.html
@@ -23,6 +23,8 @@
 <a href="13.chapter-13.html">Chapter 13</a>
 <a href="14.chapter-14.html">Chapter 14</a>
 <a href="15.chapter-15.html">Chapter 15</a>
+<a href="16.chapter-16.html">Chapter 16</a>
+    
 </nav>
 
 </header>
