--- a/2. chapter list/10.chapter-10.html
+++ b/2. chapter list/10.chapter-10.html
@@ -24,6 +24,7 @@
 <a href="14.chapter-14.html">Chapter 14</a>
 <a href="15.chapter-15.html">Chapter 15</a>
 <a href="16.chapter-16.html">Chapter 16</a>
+<a href="17.chapter-17.html">Chapter 17</a>
 
 </nav>
 
