--- a/2. chapter list/16.chapter-16.html
+++ b/2. chapter list/16.chapter-16.html
@@ -24,6 +24,7 @@
             <a href="13.chapter-13.html">Chapter 13</a>
             <a href="14.chapter-14.html">Chapter 14</a>
             <a href="15.chapter-15.html">Chapter 15</a>
+            <a href="17.chapter-17.html">Chapter 17</a>
         
         </nav>
         
