--- a/2. chapter list/15.chapter-15.html
+++ b/2. chapter list/15.chapter-15.html
@@ -33,7 +33,7 @@
 
 <h1>Pokemon Radical Red Walkthrough</h1>
 
-<h2>Cerulean City Gym Challenge - Misty</h2>
+<h2>Chapter 15 - Cerulean City Gym Challenge - Misty</h2>
 
 <p>
 
