--- a/2. chapter list/13.chapter-13.html
+++ b/2. chapter list/13.chapter-13.html
@@ -25,6 +25,7 @@
     <a href="15.chapter-15.html">Chapter 15</a>
     <a href="16.chapter-16.html">Chapter 16</a>
     <a href="17.chapter-17.html">Chapter 17</a>
+    <a href="18.chapter-18.html">Chapter 18</a>
 
 </nav>
 
