--- a/2. chapter list/16.chapter-16.html
+++ b/2. chapter list/16.chapter-16.html
@@ -25,6 +25,7 @@
             <a href="14.chapter-14.html">Chapter 14</a>
             <a href="15.chapter-15.html">Chapter 15</a>
             <a href="17.chapter-17.html">Chapter 17</a>
+            <a href="18.chapter-18.html">Chapter 18</a>
         
         </nav>
         
