--- a/2. chapter list/12.chapter-12.html
+++ b/2. chapter list/12.chapter-12.html
@@ -27,6 +27,8 @@
 <a href="17.chapter-17.html">Chapter 17</a>
             <a href="18.chapter-18.html">Chapter 18</a>
             <a href="19.chapter-19.html">Chapter 19</a>
+             <a href="20.chapter-20.html">Chapter 20</a>
+  
             
 </nav>        
 
