--- a/2. chapter list/12.chapter-12.html
+++ b/2. chapter list/12.chapter-12.html
@@ -35,6 +35,13 @@
 <a href="25.chapter-25.html">Chapter 25</a>
 <a href="26.chapter-26.html">Chapter 26</a>
 <a href="27.chapter-27.html">Chapter 27</a>
+<a href="28.chapter-28.html">Chapter 28</a>
+<a href="29.chapter-29.html">Chapter 29</a>
+<a href="30.chapter-30.html">Chapter 30</a>
+<a href="31.chapter-31.html">Chapter 31</a>
+<a href="32.chapter-32.html">Chapter 32</a>
+<a href="33.chapter-33.html">Chapter 33</a>
+<a href="34.chapter-34.html">Chapter 34</a>
   
             
 </nav>        
