--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -66,6 +66,11 @@ SPECIAL CATCH: Catch a 3-star pokemon with no catchrate limit (reccomend catchin
 <br>
 <br>
 
+- Choose your three pokemon for the shwodown and upload your first draft sheet.
+
+<br>
+<br>
+
 - Train your three pokemon to level 15 for first showdown.
 
 <br>
