--- a/draftboard.html
+++ b/draftboard.html
@@ -24,7 +24,12 @@
 
 <div class="container">
 
-    <h1> draftboards.</h1>
+    <h1> draftboards </h1>
+
+    <table> 
+    <tr> </tr>
+    
+    </table> 
 
 
 
