--- a/draftboard.html
+++ b/draftboard.html
@@ -26,8 +26,84 @@
 
     <h1> draftboards </h1>
 
-    <table> 
-    <tr> </tr>
+<!-- table shit -->
+ <table border="0" cellpadding="0" cellspacing="0" width="326" style="border-collapse:
+ collapse;width:246pt">
+  <thead>
+    <tr height="19" style="height:14.5pt">
+  
+      <th>ROSTER
+  DRAFTBOARD</th>
+ 
+    </tr>
+  </thead>
+ <colgroup><col width="90" style="mso-width-source:userset;mso-width-alt:3141;width:68pt">
+ <col width="78" style="mso-width-source:userset;mso-width-alt:2722;width:59pt">
+ <col width="63" style="mso-width-source:userset;mso-width-alt:2210;width:48pt">
+ <col width="52" style="mso-width-source:userset;mso-width-alt:1815;width:39pt">
+ <col width="43" style="mso-width-source:userset;mso-width-alt:1489;width:32pt">
+ </colgroup>
+  <tbody>
+ 
+    <tr height="19" style="height:14.5pt">
+  
+      <td height="19" style="height:14.5pt"></td>
+  
+      <td>ADAM</td>
+  
+      <td>LEEROY</td>
+  
+      <td>MAAZ</td>
+  
+      <td></td>
+ 
+    </tr>
+ 
+    <tr height="19" style="height:14.5pt">
+  
+      <td height="19" style="height:14.5pt">TIER 1&nbsp;</td>
+  
+      <td>1. Mankey</td>
+  
+      <td></td>
+  
+      <td></td>
+  
+      <td></td>
+ 
+    </tr>
+ 
+    <tr height="19" style="height:14.5pt">
+  
+      <td height="19" style="height:14.5pt">(NO DUALITY)</td>
+  
+      <td>2. Turtwig</td>
+  
+      <td></td>
+  
+      <td></td>
+  
+      <td></td>
+ 
+    </tr>
+ 
+    <tr height="19" style="height:14.5pt">
+  
+      <td height="19" style="height:14.5pt"></td>
+  
+      <td>3. Pawniard</td>
+  
+      <td></td>
+  
+      <td></td>
+  
+      <td></td>
+ 
+    </tr>
+  </tbody>
+</table>
+
+<!--  table shit    -->
     
     </table> 
 
