--- a/2. chapter list/3. chapter-3.html
+++ b/2. chapter list/3. chapter-3.html
@@ -73,6 +73,19 @@ STAGE & BST LIMIT: FIRST STAGE ONLY, BST; 350 OR LOWER.
 <br>
 <br>
 
+<strong>CATCHING GUIDE</strong>
+        
+<br>
+Generally, with the help of dexnav, you should catch pokemon aiming for a 2-3 star 
+potential pokemon of the species you are trying to catch. That beind said, later in
+the game, we will find an IV Perfector who can help you build perfect 3-stars for your 
+needs. So it is perfectly okay for now to catch pokemon that are a good fit to build into 
+a three star, and project them into three stars when you play showdowns, until you can perfect 
+them later in the game. If you need more clarifications ask Adam. We aim to improve this guide. 
+
+<br>
+<br>
+
 - Catch 1 pokemon from Route 1 (BST LIMIT).
 
 <br>
