--- a/2. chapter list/4. chapter-4.html
+++ b/2. chapter list/4. chapter-4.html
@@ -76,12 +76,17 @@ SPECIAL CATCH: Catch a 3-star pokemon with no catchrate limit (reccomend catchin
 <br>
 <br>
 
+- Present your team to the group when ready to lock.
+
+<br>
+<br>
+
+- Load your team into showdown.  
+
+<br>
+<br>
+
 [PREP FOR SHOWDOWN]
-
-<br>
-<br>
-
-PREP: LOAD YOUR TEAM IN SHOWDOWN.
 
 <br>
 <br>
@@ -94,12 +99,25 @@ STAGE & BST LIMIT: FIRST STAGE ONLY, BST; 350 OR LOWER.
 
 <br>
 <br>
+<br>
 
-FORMAT: 3 V 3 BATTLE (LEVEL CAP: 15)
+FORMAT: 3 vs 3 battle (best of 5). 
+
 <br>
-EVS: ALL 1 EV
+
+EVS: 10 EVs to spend per pokemon(DO RESEARCH). 
+
 <br>
-NATURES: ALL BASHFUL
+
+NATURES: CHOSE BEST NATURES (USE SMOGON OR RESEARCH)(CAN BE CHANGED IN POKECENTRE).
+
+<br>
+
+ABILITIES: CHOOSE IDEAL ABILITY IN SHOWDOWN (CAN PROJECT DESIRED ABILITY EVEN IF NOT IN GAME).     
+
+<br>
+
+HELD ITEMS: ALL HOLDING POKEBALLS. 
 
 <br>
 <br>
