--- a/2. chapter list/9.chapter-9.html
+++ b/2. chapter list/9.chapter-9.html
@@ -80,6 +80,10 @@ PREP:
 
 <br>
 
+- Update your roster draft before the showdown and send.
+
+<br>
+
 - Train your team to lv 22, and load your team into showdown.
 
 <br>
@@ -95,10 +99,14 @@ STAGE & BST LIMIT: Any stage, BST 420 or lower.
 <br>
          
 FORMAT: 6 vs 6 battle (best of 5).
+<br> 
+EVS: 30 EVs to spend per pokemon (DO RESEARCH OR SMOGON).
+<br> 
+NATURES: CHOSE BEST NATURES (USE SMOGON OR RESEARCH)(CAN BE CHANGED IN POKECENTRE).
 <br>
-EVS: All 1 EV.
-<br>
-NATURES: All bashful.
+ABILITIES: CHOOSE IDEAL ABILITY IN SHOWDOWN (CAN PROJECT DESIRED ABILITY EVEN IF NOT IN GAME).
+<br>     
+HELD ITEMS: ALL HOLDING POKEBALLS. 
 
 <br>
 <br>
