--- a/2. chapter list/11.chapter-11.html
+++ b/2. chapter list/11.chapter-11.html
@@ -65,6 +65,22 @@ ACCESS: NO CATCHING
 <br> 
   
 - Go south and do the puzzle battle in the house for Move Relearner.
+<br>
+(guide)
+<br>
+- choose buneary, flecthing, and phanpy. 
+<br>
+- buneary fakout then drain punch. 
+<br>
+- switch to phanphy for pikachu. 
+<br>
+- earthquake, ice shard then flecthing
+<br>
+- switch to bunear for timburr
+<br>
+- fake out then healing wish.
+<br>
+- bravebird till win. 
 
 <br>
 <br>
