--- a/2. chapter list/13.chapter-13.html
+++ b/2. chapter list/13.chapter-13.html
@@ -79,7 +79,12 @@ ACCESS: Everything up to Route 25.
 <br>
 <br>
         
-ROSTER: 16 POKEMON (1 NEW)
+- Also route 21 is now open, so catch 1 pokemon there.
+
+<br>
+<br>
+
+ROSTER: 17 POKEMON (2 NEW)
 <br>
 CATCHRATE: Try stay 120 and higher.
 <br>
