--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page with Link Elements</title>
+    <title>Index Page with Link to Cheatsheet</title>
     <!-- Linking a CSS stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- A clickable link in the body -->
-    <a href="https://www.example.com">Visit Example.com</a>
+    <!-- A link to the 'cheatsheet-home.html' page -->
+    <a href="cheatsheet-home.html">Go to Cheatsheet Home</a>
 </body>
 </html>
