--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <!-- A link to the 'cheatsheet-home.html' page -->
-    <a href="cheatsheet-home.html">Go to Cheatsheet Home</a>
+    <a href="cheatsheet-home.html">webdev-cheatsheat</a>
 </body>
 </html>
