--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <!-- A link to the 'cheatsheet-home.html' page -->
-     <a href="webdev-cheatsheet/wdcs-home.html">webdev-cheatsheat</a>
+     <a href="webdev-cheatsheet/wdcs-home.html">webdev-cheatsheet</a>
 </body>
 </html>
