--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -2,42 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Structure and Elements</title>
-    <link rel="stylesheet" href="styles-wd-home.css">
+    <title>WebDev Cheat Sheet</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <h2>(language)</h2>
-    <p><b>HTML</b> - Hyper Text Markup Language<br>
-    → for writing content to websites.</p>
-
-    <h2>(opening a website)</h2>
-    <p>All elements go in <span class="code">&lt;element&gt;</span> format.</p>
-
-    <h2>(common elements)</h2>
-    <ul>
-        <li><span class="code">&lt;p&gt;</span> - paragraph element.</li>
-        <li><span class="code">&lt;b&gt;</span> - bold</li>
-        <li><span class="code">&lt;li&gt;</span> - ordered list</li>
-        <li><span class="code">&lt;ul&gt;</span> - unordered list</li>
-    </ul>
-
-    <div class="divider"></div>
-
-    <h2>(family tree structure)</h2>
-    <p>HTML is structured like so:</p>
-    <pre class="code">
-&lt;html&gt;
-  &lt;body&gt;
-    &lt;p&gt;&lt;/p&gt;
-  &lt;/body&gt;
-&lt;/html&gt;
-    </pre>
-    <p>So open, open, open, close, close, close.<br>Parents and children.</p>
-
-    <div class="divider"></div>
-
+    <h1>WebDev Cheat Sheet</h1>
 </body>
 </html>
-
