--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -9,5 +9,19 @@
 </head>
 <body>
     <h1>WebDev Cheat Sheet</h1>
+
+   <br>
+    <br>
+<h1>Topics</h1>
+    <ol>
+        <li>HTML Basics</li>
+        <li>CSS Styling</li>
+        <li>JavaScript Essentials</li>
+        <li>Web Development Tools</li>
+        <li>Responsive Design</li>
+    </ol>
+
+
+    
 </body>
 </html>
