--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -8,20 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Title of the page -->
     <h1>WebDev Cheat Sheet</h1>
 
-   <br>
-    <br>
-<h1>Topics</h1>
+    <!-- Topics section -->
+    <h2>Topics</h2>
     <ol>
-        <li>HTML Basics</li>
-        <li>CSS Styling</li>
-        <li>JavaScript Essentials</li>
-        <li>Web Development Tools</li>
-        <li>Responsive Design</li>
+        <li><a href="#html-basics">HTML Basics</a></li>
+        <li><a href="#css-styling">CSS Styling</a></li>
+        <li><a href="#javascript-essentials">JavaScript Essentials</a></li>
+        <li><a href="#web-development-tools">Web Development Tools</a></li>
+        <li><a href="#responsive-design">Responsive Design</a></li>
     </ol>
 
-
-    
 </body>
 </html>
