--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -10,7 +10,9 @@
 <body>
 
     <!-- Title of the page -->
-    <h1>WebDev Cheat Sheet</h1>
+    <header>
+        <h1>WebDev Cheat Sheet</h1>
+    </header>
 
     <!-- Topics section -->
     <h2>Topics</h2>
