--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -17,7 +17,7 @@
     <!-- Topics section -->
     <h2>Topics</h2>
     <ol>
-        <li><a href="#html-basics">HTML Basics</a></li>
+        <li><a href="1.html-basics.html">HTML Basics</a></li>
         <li><a href="#css-styling">CSS Styling</a></li>
         <li><a href="#javascript-essentials">JavaScript Essentials</a></li>
         <li><a href="#web-development-tools">Web Development Tools</a></li>
