--- a/webdev-cheatsheet/wdcs-home.html
+++ b/webdev-cheatsheet/wdcs-home.html
@@ -16,13 +16,14 @@
 
     <!-- Topics section -->
     <h2>Topics</h2>
-    <ol>
-        <li><a href="topics/1.html-basics.html">HTML Basics</a></li>
-        <li><a href="#css-styling">CSS Styling</a></li>
-        <li><a href="#javascript-essentials">JavaScript Essentials</a></li>
-        <li><a href="#web-development-tools">Web Development Tools</a></li>
-        <li><a href="#responsive-design">Responsive Design</a></li>
-    </ol>
+<ol>
+    <li><a href="topics/1.html-basics.html">HTML Basics</a></li>
+    <li><a href="topics/2.css-styling.html">CSS Styling</a></li>
+    <li><a href="topics/3.javascript-essentials.html">JavaScript Essentials</a></li>
+    <li><a href="topics/4.web-development-tools.html">Web Development Tools</a></li>
+    <li><a href="topics/5.responsive-design.html">Responsive Design</a></li>
+</ol>
+
 
 </body>
 </html>
