--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page with Link to Cheatsheet</title>
+    <title>Index Page with Links</title>
     <!-- Linking a CSS stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- A link to the 'cheatsheet-home.html' page -->
-     <a href="webdev-cheatsheet/wdcs-home.html">webdev-cheatsheet</a>
+    <a href="webdev-cheatsheet/wdcs-home.html">webdev-cheatsheet</a>
+    
+    <!-- A new link to the 'mathalon/math-index.html' page -->
+    <a href="mathalon/math-index.html">Mathalon</a>
 </body>
 </html>
