--- a/mathalon/math-index.html
+++ b/mathalon/math-index.html
@@ -13,19 +13,9 @@
         <p>Can you beat your high score?</p>
     </header>
     <main>
+        <!-- Centered Start Game button -->
         <section id="game">
-            <p id="question">Press Start to Begin!</p>
-            <form id="game-form">
-                <input type="number" id="answer" placeholder="Your answer" disabled required>
-                <button type="submit" id="submit-btn" disabled>Submit</button>
-            </form>
             <button id="start-btn">Start Game</button>
-            <p id="feedback"></p>
-        </section>
-        <section id="stats">
-            <h2>Stats</h2>
-            <p>Current Streak: <span id="current-streak">0</span></p>
-            <p>High Score: <span id="high-score">0</span></p>
         </section>
     </main>
     <footer>
