--- a/mathalon/math-index.html
+++ b/mathalon/math-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Challenge</title>
     <!-- Linking the CSS file -->
-    <link rel="stylesheet" href="math.index.css">
+    <link rel="stylesheet" href="math-index.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,6 @@
         <p>&copy; 2024 Math Challenge. All Rights Reserved.</p>
     </footer>
     <!-- Linking the JavaScript file -->
-    <script src="math.index.js"></script>
+    <script src="math-index.js"></script>
 </body>
 </html>
