--- a/mathalon/game.html
+++ b/mathalon/game.html
@@ -12,11 +12,14 @@
         <p>Answer as many questions as possible! The difficulty increases with your score.</p>
     </header>
     <main>
+        <!-- Prominent Level Indicator -->
+        <p id="level-indicator">Level: 1</p>
         <section id="game">
             <p id="question">Loading question...</p>
             <form id="game-form">
                 <input type="number" id="answer" placeholder="Enter your answer" required>
-                <button type="submit" id="submit-btn">Submit</button>
+                <!-- Correctly updated button label -->
+                <button type="submit" id="submit-btn">Enter</button>
             </form>
             <p id="feedback"></p>
         </section>
