--- a/mathalon/game.html
+++ b/mathalon/game.html
@@ -12,7 +12,7 @@
         <p>Answer as many questions as possible! The difficulty increases with your score.</p>
     </header>
     <main>
-        <!-- Prominent Level Indicator -->
+        <!-- Single Level Indicator -->
         <p id="level-indicator">Level: 1</p>
         <section id="game">
             <p id="question">Loading question...</p>
