--- a/mathalon/math-index.html
+++ b/mathalon/math-index.html
@@ -3,35 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Challenge - Game</title>
-    <link rel="stylesheet" href="game.css">
+    <title>Math Challenge</title>
+    <link rel="stylesheet" href="math-index.css">
 </head>
 <body>
     <header>
         <h1>Math Challenge</h1>
-        <p>Answer as many questions as possible! The difficulty increases with your score.</p>
+        <p>Can you beat your high score?</p>
     </header>
     <main>
-        <!-- Prominent Level Indicator -->
-        <p id="level-indicator">Level: 1</p>
-        <section id="game">
-            <p id="question">Loading question...</p>
-            <form id="game-form">
-                <input type="number" id="answer" placeholder="Enter your answer" required>
-                <!-- Changed button label to "Enter" -->
-                <button type="submit" id="submit-btn">Enter</button>
-            </form>
-            <p id="feedback"></p>
-        </section>
-        <section id="stats">
-            <h2>Game Stats</h2>
-            <p>Current Score: <span id="current-score">0</span></p>
-            <p>High Score: <span id="high-score">0</span></p>
+        <section id="start-section">
+            <button id="start-btn">Start Game</button>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Math Challenge. All Rights Reserved.</p>
     </footer>
-    <script src="game.js"></script>
+    <script src="math-index.js"></script>
 </body>
 </html>
