--- a/mathalon/game.html
+++ b/mathalon/game.html
@@ -28,6 +28,14 @@
             <p>High Score: <span id="high-score">0</span></p>
         </section>
     </main>
+    <!-- Modal for level-up transitions -->
+    <div id="level-modal" class="hidden">
+        <div id="modal-content">
+            <h2 id="modal-title"></h2>
+            <p id="modal-description"></p>
+            <button id="continue-btn">Continue</button>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2024 Math Challenge. All Rights Reserved.</p>
     </footer>
