--- a/mathalon/game.html
+++ b/mathalon/game.html
@@ -16,7 +16,7 @@
         <section id="game">
             <p id="question">Loading question...</p>
             <form id="game-form">
-                <input type="number" id="answer" placeholder="Enter your answer" required>
+                <input type="number" id="answer" placeholder="Enter your answer">
                 <button type="submit" id="submit-btn">Enter</button>
             </form>
             <p id="feedback"></p>
