--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seychelles Chess Rankings</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Link to External CSS -->
+    <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
+
+    <!-- Page Title -->
     <h1>Seychelles Chess Player Rankings</h1>
 
+    <!-- Rankings Table -->
     <table id="rankingsTable">
         <thead>
             <tr>
-                <th>Rank</th>
-                <th>Username</th>
-                <th>Platform</th>
-                <th>Blitz</th>
-                <th>Rapid</th>
-                <th>Bullet</th>
+                <th>Rank</th>        <!-- Player Rank -->
+                <th>Username</th>    <!-- Player Username -->
+                <th>Platform</th>    <!-- Platform (Chess.com or Lichess) -->
+                <th>Blitz</th>       <!-- Blitz Rating -->
+                <th>Rapid</th>       <!-- Rapid Rating -->
+                <th>Bullet</th>      <!-- Bullet Rating -->
             </tr>
         </thead>
         <tbody id="rankingsBody">
-            <!-- Rankings will be inserted here -->
+            <!-- Table Rows Will Be Inserted Here Dynamically -->
         </tbody>
     </table>
 
-    <script src="script.js"></script>
+    <!-- Link to External JavaScript -->
+    <script src="chess-script.js"></script>
+
 </body>
 </html>
