--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Welcome to the Index Page</h1>
+
+    <!-- Navigation Links -->
     <ul>
         <li><a href="webdev-cheatsheet/wdcs-home.html">Webdev-Cheatsheet</a></li>
         <li><a href="mathalon/math-index.html">Mathalon</a></li>
+        <li><a href="chess-rankings/chess-index.html">Seychelles Chess Rankings</a></li>
     </ul>
 </body>
 </html>
