--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="webdev-cheatsheet/wdcs-home.html">Webdev-Cheatsheet</a></li>
         <li><a href="mathalon/math-index.html">Mathalon</a></li>
-        <li><a href="chess-rankings/chess-index.html">Seychelles Chess Rankings</a></li>
+        <li><a href="chess-index.html">Seychelles Chess Rankings</a></li>
     </ul>
 </body>
 </html>
