--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -2,36 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seychelles Chess Rankings</title>
-
+    <title>Seychelles Chess Player Rankings</title>
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
-
-    <!-- Page Title -->
     <h1>Seychelles Chess Player Rankings</h1>
 
     <!-- Rankings Table -->
     <table id="rankingsTable">
         <thead>
             <tr>
-                <th>Rank</th>        <!-- Player Rank -->
-                <th>Username</th>    <!-- Player Username -->
-                <th>Platform</th>    <!-- Platform (Chess.com or Lichess) -->
-                <th>Blitz</th>       <!-- Blitz Rating -->
-                <th>Rapid</th>       <!-- Rapid Rating -->
-                <th>Bullet</th>      <!-- Bullet Rating -->
+                <th>Rank</th>
+                <th>Username</th>
+                <th>Platform</th>
+                <th>Rapid</th>
+                <th>Blitz</th>
+                <th>Bullet</th>
             </tr>
         </thead>
         <tbody id="rankingsBody">
-            <!-- Table Rows Will Be Inserted Here Dynamically -->
+            <!-- Data Will Be Inserted Dynamically -->
         </tbody>
     </table>
 
-    <!-- Link to External JavaScript -->
+    <!-- Link to External JS -->
     <script src="chess-script.js"></script>
-
 </body>
 </html>
